Fri Jun 04 15:28:21 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/esetinternal.h,common/omenquireinternal.h,
	  common/rset.h,expand/esetinternal.cc,matcher/rset.cc: RSetI is used
	  when collating statistics prior to performing the match, and when
	  generating an ESet.  The second use is entirely unnecessary and just
	  ends up with us copying the std::set<Xapian::docid> from inside the
	  Xapian::RSet object, so eliminate it and just use the Xapian::RSet
	  object directly.  This allows RSetI to be simplified somewhat too.

Fri Jun 04 14:22:38 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Make arrays static const.

Fri Jun 04 13:25:20 GMT 2010  Olly Betts <olly@survex.com>

	* backends/Makefile.mk: Note need to update include/xapian/version_h.cc
	  when adding a new backend.
	* AUTHORS: Thanks to Conrad Hoffmann for pointing this omission out.

Thu Jun 03 15:01:44 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/soaktest/soaktest_queries.cc: Add missing include of str.h

Thu Jun 03 12:09:35 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/Makefile.am: Fix building of zlib-vg.so in VPATH builds.

Thu Jun 03 11:49:31 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/orpostlist.cc,tests/api_backend.cc: Fix several bugs in
	  OrPostList::check() (introduced since 1.2.0).  Fixes ticket #485.
	  Specifically, we have to check a sub-postlist even if head=did,
	  because we need to know if that sub-postlist is valid.  Also, if
	  a sub-postlist is not valid, set its head to did+1, since we know
	  that we're no longer interested in matches before did, and this
	  allows the OrPostList to assume that the minimum docid of its
	  children is the current docid.

Thu Jun 03 07:15:24 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/: Implement MultiXorPostList which returns correct weights
	  for XOR of more than 2 subqueries, and drop XorPostList completely.
	  (ticket#475)