@@ -1,3 +1,8 @@
+Fri Jun 04 15:36:45 GMT 2010  Olly Betts <olly@survex.com>
+
+	* common/pretty.h: RSetI objects are no longer passed as parameters
+	  or return values, so we no longer need to handle them.
+
 Fri Jun 04 15:28:21 GMT 2010  Olly Betts <olly@survex.com>
 
 	* api/omenquire.cc,common/esetinternal.h,common/omenquireinternal.h,
